Fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -73,13 +73,14 @@ html {
   font-size: var(--fontSize-root);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 body {
   font-family: var(--font-body);
   font-size: var(--fontSize-1);
   color: var(--color-text);
-  overflow: "hidden";
+  overflow-x: hidden;
 }
 
 footer {
